<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:padding="16dp"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:layout_width="match_parent">
    <ImageView
        android:id="@+id/icon"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/icon"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:contentDescription="" />
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/icon"
        android:id="@+id/login_input_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_email"
            android:hint="@string/mav_emailText"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_below="@+id/login_input_email"
        android:id="@+id/login_input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/login_password"
            android:hint="@string/mav_passText"
            android:inputType="textPassword"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_below="@+id/login_input_password"
        android:id="@+id/login_layout_or"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#C4C8C9"
            android:layout_margin="5dp" />
        <TextView
            android:padding="5dp"
            android:text="@string/mav_orText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:background="#C4C8C9"
            android:layout_margin="5dp" />
    </LinearLayout>
    <TextView
        android:layout_below="@+id/login_layout_or"
        android:id="@+id/login_btn_sign_up"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/mav_signupText"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="11dp"
        android:layout_below="@+id/login_btn_sign_up"
        android:layout_centerHorizontal="true" />
    <com.google.android.gms.common.SignInButton
        android:layout_below="@+id/login_button"
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:layout_below="@+id/sign_in_button"
        android:id="@+id/login_btn_login"
        android:text="@string/mav_loginText"
        android:background="@drawable/button_border_login"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_below="@+id/login_btn_login"
        android:id="@+id/login_btn_forgot_password"
        android:layout_centerHorizontal="true"
        android:clickable="true"
        android:textStyle="bold"
        android:text="@string/mav_forgotPassText"
        android:textColor="@color/colorPrimaryDark"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</RelativeLayout>